--- a/Obligatorio.Angular/src/app/components/sign-up/sign-up.component.html
+++ b/Obligatorio.Angular/src/app/components/sign-up/sign-up.component.html
@@ -1,1 +1,90 @@
-<p>sign-up works!</p>
+
+
+<div class="container">
+    <h2>Iniciar Sesión</h2>
+    <form (ngSubmit)="onSubmit(loginForm)" #loginForm="ngForm">
+        <div class="form-group">
+            <label for="usuario">Usuario:</label>
+            <input type="text" class="form-control" id="usuario" name="usuario"
+                required
+                [(ngModel)]="user" name="usuario">
+        </div>
+        <div class="form-group">
+            <label for="contrasena">Contraseña:</label>
+            <input type="password" class="form-control" id="contraseña"
+                name="contrasena"
+                required [(ngModel)]="pass">
+            <div *ngIf="!passValid">
+                <span class="message-error">La contraseña no cumple con el formato
+                    {{showPassInvalidMessage()}}</span>
+            </div>
+
+        </div>
+        <div class="form-group">
+            <label for="ci">CI:</label>
+            <input type="text" class="form-control" id="ci"
+                required [(ngModel)]="ci" name="ci">
+
+        </div>
+        <div class="form-group">
+            <label for="nombreCompleto">Nombre cmpleto:</label>
+            <input type="text" class="form-control" id="nombreCompleto"
+                name="nombreCompleto"
+                required [(ngModel)]="nombreCompleto">
+
+        </div>
+        <div class="form-group">
+            <label for="fch_nacimiento">Nombre cmpleto:</label>
+            <input type="date" class="form-control" id="fch_nacimiento"
+                name="fch_nacimiento"
+                required [(ngModel)]="fechaNacimiento">
+        </div>
+        <div class="form-group">
+            <label for="fch_nacimiento">¿Tiene carnet?</label>
+            <p> <input type="radio" name="siTiene" id="siTiene"
+                    [ngModel]="tieneCarnet"> Si</p>
+            <p> <input type="radio" name="noTiene" id="noTiene"> No</p>
+        </div>
+        <div class="form-group" *ngIf="tieneCarnet">
+            <p>Datos del carnet</p>
+            <div class="form-group">
+                <label for="fechaEmision">Fecha Emisión:</label>
+                <input type="date" class="form-control" id="fechaEmision"
+                    name="fechaEmision"
+                    [required]="tieneCarnet" [(ngModel)]="fechaEmisionCarnet">
+            </div>
+            <div class="form-group">
+                <label for="fechaVencimiento">Fecha vencimiento:</label>
+                <input type="date" class="form-control" id="fechaVencimiento"
+                    name="fechaVencimiento"
+                    [required]="tieneCarnet"
+                    [(ngModel)]="fechaVencimientoCarnet">
+            </div>
+            <div class="form-group">
+                <label for="carnet">Comprobante</label>
+                <input [required]="tieneCarnet" type="file" id="carnet"
+                    (change)="onFileSelected($event)" accept=".jpg, .pdf" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="domicilio">Domicilio completo de residencia:</label>
+            <input type="text" class="form-control" id="domicilio"
+                name="domicilio" required [(ngModel)]="docimicilio">
+        </div>
+        <div class="form-group">
+            <label for="telefono">Correo electrónico</label>
+            <input type="tel" class="form-control" id="telefono"
+                name="telefono" required [(ngModel)]="telefono">
+        </div>
+        <div class="form-group">
+            <label for="telefono">Teléfono de contacto:</label>
+            <input type="tel" class="form-control" id="telefono"
+                name="telefono" required [(ngModel)]="telefono">
+        </div>
+        <input type="submit" value="Registrarse">
+    </form>
+    <br>
+    <br>
+    <button class="join-button" routerLink="/">Volver</button>
+</div>
