Fix errors signUp

--- a/Obligatorio.Angular/src/app/components/login/login.component.html
+++ b/Obligatorio.Angular/src/app/components/login/login.component.html
@@ -21,6 +21,6 @@
     </form>
     <br>
     <br> 
-    <button class="join-button" routerLink="/registro">Registrarse</button>
+    <button class="join-button" routerLink="/signUp">Registrarse</button>
 </div>
 
