--- a/Obligatorio.Angular/src/app/components/sign-up/sign-up.component.html
+++ b/Obligatorio.Angular/src/app/components/sign-up/sign-up.component.html
@@ -32,7 +32,7 @@
             <label>Elija un rol</label>
             <p>
                 <label> <input type="radio" name="option_rol" 
-                        value="Admin" [(ngModel)]="rol" (change)="setRol('Admin')"> Administrador </label>
+                        value="Admin" [(ngModel)]="rol" (change)="setRol('Administrador')"> Administrador </label>
 
                 <label> <input type="radio" name="option_rol" 
                         value="Funcionario" [(ngModel)]="rol" (change)="setRol('Funcionario')"> Funcionario</label>
@@ -123,12 +123,12 @@
         </div>
 
         <div class="form-group">
-            <label for="domicilio">Domicilio completo de residencia:</label>
-            <input type="text" class="form-control" id="domicilio"
-                name="domicilio" required
-                [(ngModel)]="domicilio">
-            <div *ngIf="domicilioReasonsInvalid.length != 0">
-                <span class="message-error">El formato del domicilio no es
+            <label for="direccion">Domicilio completo de residencia:</label>
+            <input type="text" class="form-control" id="direccion"
+                name="direccion" required
+                [(ngModel)]="direccion">
+            <div *ngIf="direccionReasonsInvalid.length != 0">
+                <span class="message-error">El formato del direccion no es
                     valido:
                     {{showAddressInvalidMessage()}}</span>
             </div>
