--- a/Obligatorio.Angular/src/app/components/sign-up/sign-up.component.html
+++ b/Obligatorio.Angular/src/app/components/sign-up/sign-up.component.html
@@ -52,7 +52,7 @@
 
         </div>
         <div class="form-group">
-            <label for="nombreCompleto">Nombre cmpleto:</label>
+            <label for="nombreCompleto">Nombre completo:</label>
             <input type="text" class="form-control" id="nombreCompleto"
                 name="nombreCompleto"
                 required [(ngModel)]="nombreCompleto">
